--- a/website/source/stylesheets/_jumbotron.less
+++ b/website/source/stylesheets/_jumbotron.less
@@ -4,7 +4,7 @@
 
 #jumbotron-mask{
   position:relative;
-  z-index:0;
+  z-index:-2;
   height:700px;
   margin-top: @negative-hero-margin;
   background-color: black;
